Configuramos el archivo application.properties con la configuracion a la base de datos y realizamos algunas pruebas

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-
+spring.data.mongodb.uri=mongodb+srv://Cristian:12345@cluster0.abmwbqh.mongodb.net/CRUD-Reactiva-Funcional?retryWrites=true&w=majority
